# CppNNet2

./: CMakeLists.txt
include/: Activation_Layer.h  CppNNet2.h  Layer.h  Matrix.h  Neural_Layer.h  Normalization_Layer.h  typedefs.h
tests/: Matrix_Tests.cpp  Tests.cpp
